# Sibyl

./: .gitignore  AGENTS.md  BASELINE_STATUS.md  BASELINE_VERIFICATION.md  Cargo.toml  DRAFT.md  EXTERNAL.md  LLM_WIKI.md  README.md  TECHNICAL_ANALYSIS.md  VERIFICATION.md  baseline_test.sh  docker-compose-external.yml  docker-compose.yml  package-lock.json  package.json  run_ipc_server_optimized.py  run_optimized_falkordb.py  run_optimized_headless.py  run_optimized_server.py  run_server.py  server_daemon.py  start-dev.sh  start_ipc_server.py  start_optimized_server.sh  start_server.sh  test_all_ipc.py  test_all_ipc_long.py  test_baseline.sh  test_baseline_quick.sh  test_falkordb_headless.py  test_fast_headless.py  test_final_headless.py  test_full_flow.py  test_full_headless.py  test_full_integration.py  test_headless.py  test_headless_full.py  test_headless_integration.py  test_headless_optimized.py  (+12 more)
config/: default.toml  example.yaml
crates/sibyl-cli/: Cargo.toml
crates/sibyl-cli/src/: main.rs
crates/sibyl-core/: Cargo.toml
crates/sibyl-core/src/: error.rs  lib.rs  orchestrator.rs  session.rs
crates/sibyl-core/src/config/: loader.rs  mod.rs  types.rs
crates/sibyl-core/src/harness/: mod.rs  registry.rs  router.rs  trait_.rs  types.rs
crates/sibyl-core/src/ipc/: bridge.rs  mod.rs  types.rs
crates/sibyl-core/src/session/: manager.rs  mod.rs  persistence.rs  state.rs  types.rs
crates/sibyl-deps/: Cargo.toml
crates/sibyl-deps/src/: checker.rs  config.rs  container.rs  error.rs  falkordb.rs  lib.rs  manager.rs  opencode.rs  python_ipc.rs
crates/sibyl-harness/: Cargo.toml
crates/sibyl-harness/src/: error.rs  lib.rs  traits.rs  types.rs
crates/sibyl-ipc/: Cargo.toml
crates/sibyl-ipc/src/: client.rs  error.rs  lib.rs  protocol.rs  server.rs
crates/sibyl-opencode/: Cargo.toml
crates/sibyl-opencode/examples/: sse_test.rs
crates/sibyl-opencode/src/: client.rs  config.rs  error.rs  lib.rs  permissions.rs  spawn.rs  sse.rs  sync.rs  types.rs  websocket.rs
crates/sibyl-opencode/tests/: parse_events.rs
crates/sibyl-plugin/: Cargo.toml
crates/sibyl-plugin/src/: config.rs  discovery.rs  error.rs  lib.rs  manager.rs  plugin.rs  skill.rs  workflow.rs
crates/sibyl-plugin/src/mcp/: client.rs  manager.rs  mod.rs  types.rs
crates/sibyl-plugin/src/skill/: loader.rs  mod.rs  parser.rs  registry.rs  types.rs
crates/sibyl-plugin/src/tool/: memory_tools.rs  mod.rs  registry.rs  types.rs
crates/sibyl-plugin/src/workflow/: context.rs  executor.rs  loader.rs  mod.rs  types.rs
crates/sibyl-tui/: Cargo.toml
crates/sibyl-tui/src/: app.rs  background.rs  lib.rs  main.rs  session.rs
crates/sibyl-tui/src/input/: commands.rs  composer.rs  handler.rs  mod.rs
crates/sibyl-tui/src/render/: chat.rs  input.rs  markdown.rs  memory.rs  mod.rs  queue.rs  status.rs
crates/sibyl-tui/src/theme/: colors.rs  mod.rs  styles.rs
crates/sibyl-tui/src/widgets/: completion.rs  help.rs  mod.rs  scrollbar.rs  spinner.rs
docs/: BASELINE_VERIFICATION.md  LLM_WIKI.md
plugins/skills/: code-reviewer.json
plugins/workflows/: refactor.json
python/: pyproject.toml  run_test_suite.py  start_server.sh  test_embedded.py  test_headless.py  test_optimized.py
python/sibyl_ipc_server/: __init__.py  __main__.py  __main_optimized__.py  handlers.py  pyproject.toml  server.py
python/sibyl_memory/: __init__.py  context_builder.py  episode_manager.py  graphiti_client.py  main.py  memory.py  models.py  pyproject.toml  relevance_filter.py  search.py  simple_store.py
python/sibyl_memory/embedder/: __init__.py  config.py  local.py
python/sibyl_memory/ipc/: __init__.py  handlers.py  protocol.py
python/sibyl_memory/llm/: __init__.py  config.py  ollama.py
python/sibyl_prompt/: __init__.py  assembler.py  builder.py  environment.py  models.py  pyproject.toml  relevance.py  template_builder.py  tokenizer.py
python/sibyl_prompt/templates/: memory.jinja2  system.jinja2  tools.jinja2
python/sibyl_relevance/: __init__.py  cache.py  evaluator.py  prompts.py
scripts/: install-plugin.sh
specs/: 01-architecture.md  02-tui-spec.md  03-core-spec.md  04-memory-spec.md  05-python-layer-spec.md  06-opencode-harness.md  07-plugin-system.md  08-mvp-roadmap.md
tui-tests/: basic.test.ts  package.json  simple.test.ts  tui-test.config.ts
tui-tests/tests/: full-flow.test.ts  messages.test.ts  nonblocking.test.ts  queue-flow.test.ts  single-message.test.ts  sse-events.test.ts
tui-traces/: tui-tests-basic.test.ts-sibyl-tui-opens-command-palette  tui-tests-basic.test.ts-sibyl-tui-shows-command-hints  tui-tests-basic.test.ts-sibyl-tui-shows-keybindings-hint  tui-tests-basic.test.ts-sibyl-tui-shows-status-bar-with-model  tui-tests-basic.test.ts-sibyl-tui-shows-welcome-screen  tui-tests-basic.test.ts-sibyl-tui-toggles-help-overlay  tui-tests-simple.test.ts-sibyl-headless-runs
