[project]
name = "sibyl-python"
version = "0.1.0"
description = "Python layer for Sibyl - Memory, Prompt Building, and IPC"
requires-python = ">=3.10"
dependencies = [
    "graphiti-core>=0.17.0",
    "sentence-transformers>=2.2.0",
    "ollama>=0.1.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sibyl-memory-server = "sibyl_ipc_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sibyl_memory", "sibyl_prompt", "sibyl_ipc_server", "sibyl_relevance"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"