[package]
name = "sibyl-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sibyl"
path = "src/main.rs"

[dependencies]
sibyl-core = { path = "../sibyl-core" }
sibyl-ipc = { path = "../sibyl-ipc" }
sibyl-opencode = { path = "../sibyl-opencode" }
sibyl-harness = { path = "../sibyl-harness" }
sibyl-deps = { path = "../sibyl-deps" }
sibyl-tui = { path = "../sibyl-tui" }

ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
clap.workspace = true
tracing-appender = "0.2"