[package]
name = "sibyl-core"
version.workspace = true
edition.workspace = true

[dependencies]
sibyl-harness = { path = "../sibyl-harness" }
sibyl-ipc = { path = "../sibyl-ipc" }
sibyl-plugin = { path = "../sibyl-plugin" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true