[package]
name = "sibyl-deps"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
dirs = "5.0"
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }