[package]
name = "sibyl-opencode"
version.workspace = true
edition.workspace = true

[dependencies]
sibyl-harness = { path = "../sibyl-harness" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
humantime-serde = "1.1"
urlencoding = "2.1"
eventsource-stream = "0.2"