[package]
name = "sibyl-plugin"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
pulldown-cmark = "0.12"
uuid.workspace = true
chrono.workspace = true
dirs = "6.0"