[package]
name = "sibyl-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sibyl"
path = "src/main.rs"

[dependencies]
sibyl-core = { path = "../sibyl-core" }
sibyl-ipc = { path = "../sibyl-ipc" }
sibyl-opencode = { path = "../sibyl-opencode" }
sibyl-harness = { path = "../sibyl-harness" }

ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

pulldown-cmark = "0.12"
syntect = "5.2"
unicode-width = "0.2"