[package]
name = "sibyl-tui"
version.workspace = true
edition.workspace = true

[lib]
name = "sibyl_tui"
path = "src/lib.rs"

[dependencies]
sibyl-core = { path = "../sibyl-core" }
sibyl-ipc = { path = "../sibyl-ipc" }
sibyl-opencode = { path = "../sibyl-opencode" }
sibyl-harness = { path = "../sibyl-harness" }
sibyl-deps = { path = "../sibyl-deps" }

ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

pulldown-cmark = "0.12"
syntect = "5.2"
unicode-width = "0.2"
serde_yaml = "0.9"
dirs = "5.0"