[project]
name = "sibyl-ipc-server"
version = "0.1.0"
description = "Sibyl IPC server for Rust-Python communication"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sibyl_ipc_server"]