[project]
name = "sibyl-memory"
version = "0.1.0"
description = "Sibyl memory system using Graphiti and FalkorDB"
requires-python = ">=3.11"
dependencies = [
    "graphiti-core[falkordb]",
    "sentence-transformers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sibyl_memory"]