[project]
name = "sibyl-memory"
version = "0.1.0"
description = "Sibyl memory system using Graphiti and FalkorDB"
requires-python = ">=3.11"
dependencies = [
    "graphiti-core[falkordb]>=0.17.0",
    "sentence-transformers>=2.2.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sibyl-memory = "sibyl_memory.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sibyl_memory"]