[project]
name = "sibyl-prompt"
version = "0.1.0"
description = "Sibyl prompt building and relevance evaluation"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sibyl_prompt"]